@@ -6,6 +6,7 @@ Bug fixes:
 - [#5321] Update .htaccess to be Apache 2.4 compatible
 
 Cleanup:
+- [#5407] Drop the old XCLASS footers
 
 Changes:
 - [#5419] Remove deprecated methods and classes
